--- a/style_1.css
+++ b/style_1.css
@@ -75,7 +75,7 @@ width:*;
 float: left;
 padding:10px;
 font-family: Delius, sans serif;
-text-align: left;
+justify-content: center;
 }
 
 .image-gallery {
@@ -107,4 +107,5 @@ background-color:#f2b0b0;
 color: #111111;
 justify-content: center;
 }
+
 
